--- a/config/.env
+++ b/config/.env
@@ -2,7 +2,7 @@ BASEURL=/api/v1
 DBURI=mongodb+srv://PeterSamehDB:Reu43SGtzPcQyFMY@cluster0.9mmekme.mongodb.net/BE_SERVER_movie_notes
 SENDEREMAIL=myorgconfrim@outlook.com
 SENDEREMAILPASSWORD=jzuehmpwqusfylow
-MODE=production
+MODE=Production
 SALTROUNDS=8
 SIGNUPKEY=SAHdbasubfouasnduinaeuin
 SIGNINKEY=KEYYYYY
